# launchpad-rs

./: .gitignore
launchpad/: Cargo.toml
launchpad/src/: color.rs  event.rs  launchpad_x.rs  lib.rs  state.rs
launchpad_example/: Cargo.toml
launchpad_example/src/: main.rs
launchpad_shortcut_manager/: Cargo.toml
launchpad_shortcut_manager/src/: main.rs  shortcuts.rs
