[package]
name = "launchpad_shortcut_manager"
version = "0.1.0"
authors = ["William Gooch <william.gooch.wg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
launchpad = { path = "../launchpad" }
enigo = "0.0.14"
lazy_static = "1.4.0"
